--- a/JLRInControl.indigoPlugin/Contents/Info.plist
+++ b/JLRInControl.indigoPlugin/Contents/Info.plist
@@ -18,7 +18,7 @@
 	<array>
 		<dict>
 			<key>CFBundleURLName</key>
-			<string>https://github.com/neilkplugins</string>
+			<string>https://github.com/neilkplugins/JLRInControlIndigo</string>
 		</dict>
 	</array>
 </dict>
